[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multi_agent_rag_orchestrator"
version = "2.0.0"
description = "Enterprise Multi-Agent Alignment Engine featuring Constitutional Agent Debate and Adversarial RAG Poisoning Defenses."
authors = [{ name = "Masthan Shaik", email = "masthan@example.com" }]
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.1.0",
    "faiss-cpu>=1.7.4",
    "pydantic>=2.0.0",
    "transformers>=4.31.0",
    "numpy>=1.24.0"
]

[project.optional-dependencies]
dev = ["black", "pytest"]
